Foxhole Watcher Update

--- a/AnyProjects/FoxholeWatcher/FoxholeWatcher/appsettings.example.json
+++ b/AnyProjects/FoxholeWatcher/FoxholeWatcher/appsettings.example.json
@@ -1,5 +1,8 @@
 {
   "Discord": {
     "WebhookUrl": "https://discord.com/api/webhooks/..."
+  },
+  "App": {
+    "TimespanBetweenChecksInSeconds": 10
   }
 }
